# siphashc

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE.md  MANIFEST.in  README.md  README.mkdn  README.rst  appveyor.yml  benchmark.py  pyproject.toml  requirements-lint.txt  requirements-test.txt  setup.cfg  setup.py  siphashc.c  test_siphashc.py
.github/: FUNDING.yml  renovate.json
.github/workflows/: codeql-analysis.yml  pre-commit.yml  pythonapp.yml  pythonpackage.yml  setup.yml
siphash/: README.md  siphash.c  siphash.h  siphash_impl.h
siphashc/: __init__.pyi
src/: siphashc.c
src/siphash/: siphash.c  siphash.h  siphash_impl.h
tests/: __init__.py  test_siphashc.py
