[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=78.0.2"]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  {include-group = "pre-commit"}
]
pre-commit = [
  "pre-commit==4.3.0"
]
test = [
  "pytest==8.4.2"
]

[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
description = "Python module (in c) for siphash-2-4"
keywords = ["siphash", "siphash-2-4"]
license = "ISC"
license-files = ["LICENSE.md"]
name = "siphashc"
requires-python = ">=3.10"
version = "2.6"

[[project.authors]]
email = "michal@weblate.org"
name = "Michal Čihař"

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Funding = "https://weblate.org/donate/"
Homepage = "https://github.com/WeblateOrg/siphashc"
"Issue Tracker" = "https://github.com/WeblateOrg/siphashc/issues"
"Source Code" = "https://github.com/WeblateOrg/siphashc"
Twitter = "https://twitter.com/WeblateOrg"

[tool.cibuildwheel]
test-command = "pytest {project}/test_siphashc.py {project}/README.rst"
test-requires = "pytest"

[tool.isort]
profile = "black"

[tool.ruff]
ignore = [
  "S101",  # CONFIG: using pytest
  "D203",  # CONFIG: incompatible with D211
  "D212"  # CONFIG: incompatible with D213
]
select = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["siphashc"]
known-third-party = ["pytest"]

[tool.ruff.mccabe]
max-complexity = 16

[tool.ruff.per-file-ignores]
"benchmark.py" = ["T201"]

[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools.packages.find]
include = ["siphashc*"]
namespaces = true
