[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=78.0.2"]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  {include-group = "pre-commit"}
]
pre-commit = [
  "pre-commit==4.3.0"
]
test = [
  "pytest==8.4.2"
]

[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
description = "Python module (in c) for siphash-2-4"
keywords = ["siphash", "siphash-2-4"]
license = "ISC"
license-files = ["LICENSE.md"]
name = "siphashc"
requires-python = ">=3.10"
version = "2.7"

[[project.authors]]
email = "michal@weblate.org"
name = "Michal Čihař"

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Funding = "https://weblate.org/donate/"
Homepage = "https://github.com/WeblateOrg/siphashc"
"Issue Tracker" = "https://github.com/WeblateOrg/siphashc/issues"
"Source Code" = "https://github.com/WeblateOrg/siphashc"
Twitter = "https://twitter.com/WeblateOrg"

[tool.check-manifest]
ignore = [
  "*.yaml",
  "*.yml",
  "benchmark.py",
  ".editorconfig"
]

[tool.check-wheel-contents]
ignore = ["W009", "W010"]

[tool.cibuildwheel]
test-command = "pytest {project}/test_siphashc.py {project}/README.rst"
test-requires = "pytest"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --strip -w {dest_dir} {wheel}"

[tool.isort]
profile = "black"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "S101",  # CONFIG: using pytest
  "D203",  # CONFIG: incompatible with D211
  "D212"  # CONFIG: incompatible with D213
]
select = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["siphashc"]
known-third-party = ["pytest"]

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.ruff.lint.per-file-ignores]
"benchmark.py" = ["T201"]

[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools.packages.find]
include = ["siphashc*"]
namespaces = true
